# Team-Blue-Game

./: .gitignore  Project_Construction_Plan.md  Project_Contruction_Plan.md  Project_Description.md  README.md  TODO.md  pyproject.toml  render.yaml  requirements.txt  test.py
.pytest_cache/v/cache/: nodeids
Progress_documentation/: Jass_Issue_Tracker.xlsx  Jass_Project_Documentation.docx
basic_Game/: game_init.py  gameplay.py  gamplay_functions.py
client/static/css/: main.css  phase11-additions.css
client/static/js/: animations.js  game.js  i18n.js  info.txt  socket.js  sounds.js  tutorial.js
client/templates/: base.html  game.html  home.html  info.txt  tutorial.html
docs/: architecture.md
docs/rules/: info.txt
game.egg-info/: PKG-INFO  SOURCES.txt
server/: lan_discovery.py  main.py  requirements.txt
server/bots/: __init__.py  base.py  info.txt  random_bot.py  rule_based_bot.py
server/game/: __init__.py  deck.py  engine.py  info.txt  rules.py  scoring.py
server/game/old_files/: game_init.py  gameplay.py  gamplay_functions.py
server/game/variants/: __init__.py  base.py  coiffeur.py  differenzler.py  info.txt  (+2 more)
server/rooms/: __init__.py  info.txt  room_manager.py
server/shared/: __init__.py  constants.py  events.py  info.txt  timing.py  types.py
server/sockets/: __init__.py  handlers.py  info.txt
tests/: test_bots.py  test_deck.py  test_engine.py  test_phase1.py  test_phase10.py  test_phase11.py  test_room_manager.py  test_room_manager_seating.py  test_rules.py  test_scoring.py  test_websocket.py
tests/test_variants/: test_schieber.py
(+2 files in other folders)
