[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "game"
version = "0.1.0"
description = "This is a descritption of my package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy==2.4.2"]


[tool.setuptools.packages.find]
where = ["."]
include = ["game"]